# NeuralNetworkCPP

./: .gitignore  CMakeLists.txt  README.md  activation_functions.cpp  activation_functions.h  main.cpp  matrix.h  model.cpp  model.h  neural_network.cpp  neural_network.h
data/: config.json
